# tcfg

./: Makefile  README.md  TODO.md  pyproject.toml
examples/: cfg.yml  decorator.py  inherit.py  nested.json
playground/: cfg.json  config.py  sample.py  sample.yml  type_checking.py
playground/v2/: type_hint.py
tcfg/: __init__.py  cfg.py  config.py  config_base.py  reserved.py  test.py  types_default.py
tcfg/type_check/: __init__.py  base.py  custom_types.py  exceptions.py
