[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tcfg"
version = "0.1.0"
authors = [
    { name="Tired Fox", email="zboehm104@gmail.com"}
]
description="Typed dataclass like configuration objects"
readme = "README.md"
license = "MIT"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    # "simll==0.1.0"
]

[project.scripts]
# moph = "mophidian.__main__:cli"

[project.urls]
"Homepage" = ""
"Documentation" = ""

[tool.black]
line-length = 100
target-version = ["py37"]
skip-string-normalization = true

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
ignore_missing_imports = true
warn_unreachable = true
no_implicit_optional = true
show_error_codes = true

